tests/examples/good/good003.jl

int main()
{
	printDouble(3.0);
	return 10;
};

void f()
{
	return;
}

void g()
{
	int x = 0;
	printInt(x);
	return;
}
