tests/examples/bad/bad100.jl
# no main

void f()
{
   return;
}
